--- a/sigecon/docker-compose.yml
+++ b/sigecon/docker-compose.yml
@@ -22,22 +22,29 @@ services:
         networks:
             - sail
         depends_on:
-            - redis
-    redis:
-        image: 'redis:alpine'
+            - mysql
+    mysql:
+        image: 'mysql/mysql-server:8.0'
         ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
+            - '${FORWARD_DB_PORT:-3306}:3306'
+        environment:
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ROOT_HOST: "%"
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
-            - 'sailredis:/data'
+            - 'sailmysql:/var/lib/mysql'
         networks:
             - sail
         healthcheck:
-            test: ["CMD", "redis-cli", "ping"]
+            test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
 networks:
     sail:
         driver: bridge
 volumes:
-    sailredis:
+    sailmysql:
         driver: local
